syntax = "proto3";

package api;

import "google/protobuf/duration.proto";

option go_package = "github.com/toitware/api.git/api";

service Auth {
  rpc Login(LoginRequest) returns (AuthResponse) {}
  rpc Refresh(RefreshRequest) returns (AuthResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
  bool remember = 3;
}

message RefreshRequest {
  bytes refresh_token = 1;
}

message AuthResponse {
  bytes access_token = 1;
  string token_type = 2;
  google.protobuf.Duration expires_in = 3;
  bytes refresh_token = 4;
}

message LogoutRequest {}

message LogoutResponse {}
