syntax = "proto3";

package toit.api;

import "toit/model/organization.proto";
import "toit/api/organization.proto";

option go_package = "github.com/toitware/api.git/toit/api";
option java_package = "io.toit.proto.toit.api";
option java_outer_classname = "UserProto";

service User {
    rpc SetPassword(SetPasswordRequest) returns (SetPasswordResponse) {}
    rpc InitiateResetPassword(InitiateResetPasswordRequest) returns (InitiateResetPasswordResponse) {}
    rpc ChangePasswordWithRPToken(ChangePasswordWithRPTokenRequest) returns (ChangePasswordWithRPTokenResponse) {}
    rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse) {}
    rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse) {}
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
        option deprecated = true;
    }
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option deprecated = true;
    }
}

message SetPasswordRequest {
    string old_password = 1;
    string new_password = 2;
}

message SetPasswordResponse {}

message InitiateResetPasswordRequest {
    string email = 1;
}

message InitiateResetPasswordResponse {
}

message ChangePasswordWithRPTokenRequest {
    string token = 1;
    string new_password = 2;
}

message ChangePasswordWithRPTokenResponse {}

message GetCurrentUserRequest {}

message GetCurrentUserResponse {
    model.User user = 1;
    model.Organization organization = 2;
}

message ListOrganizationsRequest {
    bytes user_id = 1;
    bytes offset = 2;
    int64 limit = 3;
    string order_by = 4;
    bool order_desc = 5;
}

message ListOrganizationsResponse {
    repeated model.Organization organizations = 1;
    bytes offset = 2;
}
